new_module is added successfully

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Royal Enfield</h1>
+        <h1>Duke</h1>
         
     </body>
 </html>
